--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "test": "jest",
     "start": "nodemon server",
-    "k6product": "k6 run k6/http_get_product.js",
-    "k6styles": "k6 run k6/http_get_styles.js",
-    "k6related": "k6 run k6/http_get_related.js"
+    "k6product": "k6 run testing/k6/http_get_product.js",
+    "k6styles": "k6 run testing/k6/http_get_styles.js",
+    "k6related": "k6 run testing/k6/http_get_related.js"
   },
   "devDependencies": {
+    "artillery": "^1.7.4",
     "frisby": "^2.1.3",
     "jest": "^27.0.5",
     "nodemon": "^2.0.7"
