--- a/testing/artillery/product.yaml
+++ b/testing/artillery/product.yaml
@@ -1,13 +1,31 @@
 config:
   target: "http://localhost:3001"
   phases:
-    - duration: 60
-      arrivalRate: 5
+    - duration: 10
+      arrivalRate: 100
       name: Warm up
+    - duration: 60
+      arrivalRate: 100
+      name: Steady at 100 users for 1 minute
+    - duration: 10
+      arrivalRate: 1400
+      name: Spike up to 1400 users
+    - duration: 180
+      arrivalRate: 1400
+      name: Sustained load at 1400 users for 3 minutes
+    - duration: 10
+      arrivalRate: 100
+      name: Scale down. Recovery stage
+    - duration: 180
+      arrivalRate: 100
+      name: Sustained load at 100 users for 3 minutes
+    - duration: 10
+      arrivalRate: 0
+      name: Stop
 
 scenarios:
-    flow:
+    - flow:
       - get:
-          url: "/25173"
+          url: "/api/products/25173"
           expect:
             - statusCode: 200
