Change command to not use nodemon when running docker

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "nodemon server",
+    "start": "node server",
     "k6product": "k6 run testing/k6/http_get_product.js",
     "k6productspike": "k6 run testing/k6/http_get_product_spike.js",
     "k6styles": "k6 run testing/k6/http_get_styles.js",
